--- a/_config.yml
+++ b/_config.yml
@@ -24,14 +24,14 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/JC_Profile.jpg"
+#avatar: "/assets/img/JC_Profile.jpeg" 
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-#title-img: /path/to/image
+title-img: "/assets/img/JC_Profile.jpeg" 
 
 
 # --- Footer options --- #
@@ -72,7 +72,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "JakeC007.github.io"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
