--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ footer-link-col: "#404040"
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: "<!-- Global site tag (gtag.js) - Google Analytics -->
+gtag: "<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176562127-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -120,7 +120,7 @@ footer-link-col: "#404040"
 "
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: "UA-176562127-1"
+google_analytics: "UA-176562127-1"
 
 # Google Tag Manager ID
 #gtm: ""
