Added link to my NBN page

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author: G. Jake Chanenson
 navbar-links:
   CV: "CV"
   Science Outreach: "scienceoutreach" 
+  NBN Podcast Episodes: "https://newbooksnetwork.com/hosts/profile/b0ddb744-0b2b-46bd-846a-faaab42e0bb6"
   Projects: "https://github.com/JakeC007"
   Reading Groups:
     - CCS: "CCS" 
