--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ social-network-links:
 #  yelp: yourname
 #  telegram: yourname
 #  calendly: yourname
-  mastodon: https://hci.social/@jchanen1
+  mastodon: hci.social/@jchanen1
 
 # --- General options --- #
 
