--- a/_config.yml
+++ b/_config.yml
@@ -109,10 +109,10 @@ footer-link-col: "#404040"
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-gtag: "https://www.googletagmanager.com/gtag/js?id=UA-176562127-1"
+# gtag: "https://www.googletagmanager.com/gtag/js?id=UA-176562127-1"
 
 # Fill in your Google Analytics ID to track your website using GA
-google_analytics: "UA-176562127-1"
+# google_analytics: "UA-176562127-1"
 
 # Google Tag Manager ID
 #gtm: ""
@@ -216,7 +216,7 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-  - jekyll-seo-tag
+  # - jekyll-seo-tag
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
